# jni-hello-demo

./: .gitignore  run.sh
cpp/: CMakeLists.txt  hello.cpp
java/: Manifest.txt
java/src/lc/: Hello.java  Launcher.java
